Add openAPI definition for organizations list, display in the client
