# apps/api/src/services/organization-service.ts
@@ -71,24 +71,35 @@ export class OrganizationService {
   async list(
     context: UserContext,
     query: ListQuery
-  ): Promise<ListResult<OrganizationData>> {
+  ): Promise<ListResult<OrganizationData & { userCount: string | number | bigint }>> {
     checkAccess(context, ['view-own-organizations', 'view-all-organizations']);
 
-    let qb = this.db
-      .selectFrom('organizations')
-      .select([
-        'id',
-        'name as organizationName',
-        'uri as organizationIdentifier',
-        'description as organizationDescription',
-        'networkKey',
-        'solutionApiUrl',
-        'parentId',
-      ]);
+  let qb = this.db
+    .selectFrom('organizations')
+    .leftJoin('users', 'users.organizationId', 'organizations.id')
+    .select([
+      'organizations.id',
+      'organizations.name as organizationName',
+      'organizations.uri as organizationIdentifier',
+      'organizations.description as organizationDescription',
+      'organizations.solutionApiUrl',
+      'organizations.networkKey',
+      'organizations.parentId',
+      (eb) => eb.fn.count('users.id').as('userCount')
+    ])
+    .groupBy([
+      'organizations.id',
+      'organizations.name',
+      'organizations.uri',
+      'organizations.description',
+      'organizations.solutionApiUrl',
+      'organizations.networkKey',
+      'organizations.parentId',
+    ]);
 
-    // If not view-all-organizations, restrict to own organization
+    // If user doesn't have view-all-organizations, restrict to their own organization
     if (!context.policies.includes('view-all-organizations')) {
-      qb = qb.where('id', '=', context.organizationId!);
+      qb = qb.where('organizations.id', '=', context.organizationId);
     }
     
     // Apply search filter
@@ -99,7 +110,7 @@ export class OrganizationService {
     // Get total count for pagination
     const total = (
       await qb.clearSelect()
-        .select((eb) => eb.fn.count('id').as('total'))
+        .select((eb) => eb.fn.countAll().as('total'))
         .executeTakeFirstOrThrow()
     ).total as number;
 
@@ -108,7 +119,7 @@ export class OrganizationService {
       qb = qb.orderBy(query.sortBy as any, query.sortOrder ?? 'asc');
     } else {
       // Default sorting by name
-      qb = qb.orderBy('name', 'asc');
+      qb = qb.orderBy('organizations.name', 'asc');
     }
 
     // Apply pagination
